try to fix scrollbar white gap on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,8 @@ body {
 }
 
 @media (max-width: 768px) {
-  ::-webkit-scrollbar {
-    display: none;
+  html,
+  body {
+    scrollbar-width: none;
   }
 }
